--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,7 +1,7 @@
 default: writer
 
 writer: writer.c
-	"${CROSS_COMPILE}gcc" writer.c -o writer.o
+	"${CROSS_COMPILE}gcc" writer.c -o writer
 
 clean:
-	rm *.o
+	rm -f *.o writer
